crates/ladder_types/tests/ui/generated/should_fail/test__typenum_ladder__R0_minus_R2.rs

use ladder_types::typenum_ladder::*;

fn main() {
   let _ = R0::new() - R2::new();
}
