crates/ladder_types/tests/ui/generated/should_fail/test__typenum_ladder__R0_minus_R2.stderr
error[E0277]: the trait bound `typenum::uint::UTerm: SubWithLevelDiff<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B0>>` is not satisfied
 --> tests/ui/generated/should_fail/test__typenum_ladder__R0_minus_R2.rs:5:22
  |
5 |    let _ = R0::new() - R2::new();
  |                      ^ the trait `SubWithLevelDiff<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B0>>` is not implemented for `typenum::uint::UTerm`, which is required by `ladder_types::typenum_ladder::LadderRung<typenum::uint::UTerm>: Sub<_>`
  |
  = note: required for `ladder_types::typenum_ladder::LadderRung<typenum::uint::UTerm>` to implement `Sub<ladder_types::typenum_ladder::LadderRung<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B0>>>`
